<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_open_projector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_weight="1"
            android:background="#aaaaaa"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/open_projector" />

        <TextView
            android:id="@+id/tv_close_projector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:layout_weight="1"
            android:background="#aaaaaa"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/close_projector" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:background="#cccccc"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/mirror" />

        <Spinner
            android:id="@+id/sv_mirror"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/mirror_mode"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/trapezoid_horizontal" />

        <EditText
            android:id="@+id/et_trapezoid_horizontal"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/trapezoid_horizontal_range"
            android:inputType="number"
            android:textColorHint="#BBBBBB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/trapezoid_vertical" />

        <EditText
            android:id="@+id/et_trapezoid_vertical"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/trapezoid_vertical_range"
            android:inputType="number"
            android:textColorHint="#BBBBBB" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="50px"
        android:background="#cccccc"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/contrast" />

        <EditText
            android:id="@+id/et_contrast"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/contrast_range"
            android:inputType="number"
            android:textColorHint="#BBBBBB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/bright" />

        <EditText
            android:id="@+id/et_bright"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/bright_range"
            android:inputType="number"
            android:textColorHint="#BBBBBB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/color" />

        <EditText
            android:id="@+id/et_color"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/contrast_range"
            android:inputType="number"
            android:textColorHint="#BBBBBB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/saturation" />

        <EditText
            android:id="@+id/et_saturation"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/contrast_range"
            android:inputType="number"
            android:textColorHint="#BBBBBB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/acuity" />

        <EditText
            android:id="@+id/ex_acuity"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="@string/acuity_range"
            android:inputType="number"
            android:textColorHint="#BBBBBB" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_marginTop="50px"
        android:background="#cccccc"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:gravity="center_vertical"
            android:text="@string/mode" />

        <Spinner
            android:id="@+id/sv_mode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/projector_mode"
            android:gravity="center" />

        <TextView
            android:id="@+id/status"
            android:layout_width="200px"
            android:layout_height="match_parent"
            android:layout_marginLeft="40px"
            android:background="#aaaaaa"
            android:gravity="center"
            android:text="@string/status" />

        <TextView
            android:id="@+id/statue_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>