<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout  android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qihancloud.librarydemo.com.sanbot.librarydemo.MainActivity">

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/consume_message"
        android:id="@+id/cb_deal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_text"
        android:layout_marginTop="10dp"
        android:layout_below="@id/cb_deal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_volume"
        android:layout_below="@id/tv_text"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speech_synthesis"
        android:layout_below="@id/tv_volume"
        android:id="@+id/btn_speak"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_synthesis"
        android:id="@+id/btn_pause_speak"
        android:layout_toRightOf="@id/btn_speak"
        android:layout_alignTop="@id/btn_speak"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_synthesis"
        android:id="@+id/btn_resume_speak"
        android:layout_toRightOf="@id/btn_pause_speak"
        android:layout_alignTop="@id/btn_pause_speak"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_speak_progress"
        android:layout_toRightOf="@id/btn_resume_speak"
        android:layout_alignBaseline="@id/btn_resume_speak"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleep"
        android:layout_below="@id/btn_speak"
        android:id="@+id/btn_sleep"/>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wake_up"
        android:layout_below="@id/btn_sleep"
        android:id="@+id/btn_wake"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_wake"
        android:id="@+id/tv_wake"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/tv_wake"
    android:id="@+id/tv_uid"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_uid"
        android:id="@+id/tv_touch"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_touch"
        android:id="@+id/tv_pir"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_pir"
        android:id="@+id/tv_voice_locate"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_voice_locate"
        android:text="@string/open_light"
        android:id="@+id/btn_white_light"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_light_strongest"
        android:layout_toRightOf="@id/btn_white_light"
        android:layout_alignTop="@id/btn_white_light"
        android:id="@+id/btn_light_level_max"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_light_dimest"
        android:layout_toRightOf="@id/btn_light_level_max"
        android:layout_alignTop="@id/btn_white_light"
        android:id="@+id/btn_light_level_min"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_white_light"
        android:text="@string/control_led"
        android:id="@+id/btn_led"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_head_move"
        android:text="@string/head_motion_example"
        android:layout_below="@id/btn_led"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_head_move"
        android:layout_alignTop="@id/btn_head_move"
        android:id="@+id/et_head_move"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_hand_move"
        android:text="@string/hand_motion_example"
        android:layout_below="@id/btn_head_move"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_hand_move"
        android:layout_alignTop="@id/btn_hand_move"
        android:id="@+id/et_hand_move"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_foot_move"
        android:text="@string/wheel_motion_example"
        android:layout_below="@id/btn_hand_move"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_foot_move"
        android:layout_alignTop="@id/btn_foot_move"
        android:id="@+id/et_foot_move"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_service"
        android:text="@string/service_communication"
        android:layout_below="@id/btn_foot_move"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_service"
        android:id="@+id/btn_video"
        android:text="@string/video_stream_example"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_video"
        android:id="@+id/btn_face_recognize"
        android:text="@string/face_recognization"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_get_speak_status"
        android:layout_below="@id/btn_face_recognize"
        android:text="@string/get_speak_status"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_get_speak_status"
        android:layout_alignTop="@id/btn_get_speak_status"
        android:id="@+id/tv_get_speak_status"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_get_speak_status"
        android:id="@+id/tv_infrare_distance"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_infrare_distance"
        android:id="@+id/btn_wander"/>
</RelativeLayout>
</ScrollView>